<resources>
    <string name="app_name">FundamentosAndroidApp</string>
    <string name="ir_para_proxima_tela">Ver próximo dado</string>
    <string name="ir_para_a_lista_de_jogadas">Ir para a lista de jogadas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">Fragment_1</string>
    <string name="fragment_2">Fragment_2</string>
    <string name="voltar_para_o_primeiro_fragment">Voltar para o primeiro dado</string>
    <string name="jogar_dado">Jogar dados</string>
    <string name="icone_de_um_dado">Ícone de um dado</string>
    <string name="dado_n_1">DADO 1</string>
    <string name="dado_n_2">DADO 2</string>
    <string name="dado_n_3">DADO 3</string>
    <string name="mensagem_de_confirmacao">Mensagem de confirmação</string>
    <string name="confirmar">Confirmar</string>
    <string name="titulo">Título</string>
    <string name="configuracoes">Configurações</string>
    <string name="perfil">Perfil</string>
    <string name="ajuda">Ajuda</string>
</resources>